<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="150dp"
                android:layout_height="220dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_name"
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:text="@string/pokemon_name" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:text="@string/element" />

                        <TextView
                            android:id="@+id/tv_item_element"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/element_value" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:text="@string/height" />

                        <TextView
                            android:id="@+id/tv_item_height"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/height_value" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:text="@string/weight" />

                        <TextView
                            android:id="@+id/tv_item_weight"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/weight_value" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:text="@string/category" />

                        <TextView
                            android:id="@+id/tv_item_category"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/category_value" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:text="@string/ability" />

                        <TextView
                            android:id="@+id/tv_item_ability"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/ability_value" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </LinearLayout>

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/radar_stats"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/tv_item_detail"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            tools:text="@string/detail" />


    </LinearLayout>

</ScrollView>